# EDA

./: .gitignore  README.md  databricks.yml  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CSV_TO_DELTA_FLOW.md
resources/: jobs.yml  serving.yml
src/eda_agent/: __init__.py
src/eda_agent/agents/: eda_agent.py
src/eda_agent/formatters/: json_formatter.py
src/eda_agent/services/: dataset_service.py  delta_ingestion_service.py  llm_service.py  spark_service.py
src/eda_agent/serving/: mlflow_pyfunc.py
src/eda_agent/tools/: base.py  csv_to_delta_tool.py  eda.py  missing_value_analysis.py  summary_statistics.py  tool_registry.py
src/eda_agent/workflows/: basic_eda_workflow.py  execution_flow.py  init_flow.py
tests/: test_tool_registry.py
