[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-agent-db"
version = "0.1.0"
description = "Production-grade modular EDA Agent for Databricks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.2.0",
  "databricks-langchain>=0.2.0",
  "mlflow>=2.14.0",
  "pyspark>=3.5.0",
  "pandas>=2.2.0",
  "plotly>=5.22.0",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

